<resources>
    <string name="app_name">Password Manager Sample</string>
    <string name="passwordmanager">Password Manager</string>
    <string name="vaults">Vaults</string>
    <string name="sudos">Sudos</string>
    <string name="learn_more">Learn More</string>
    <string name="sudo_label">sudoLabel</string>
    <string name="sudo_id">sudoId</string>
    <string name="success">Success</string>
    <string name="try_again">Try Again</string>
    <string name="sample_app">Sample App</string>
    <string name="registration_method">Registration Method</string>
    <string name="register_login">Register / Login</string>
    <string name="register_failure">Failed to register: %1$s</string>
    <string name="sign_out">Sign Out</string>
    <string name="signin_failure">Failed to Sign In: %1$s</string>
    <string name="registration_keys_failure">Failed to load TEST registration keys: %1$s</string>
    <string name="registration_missing_secret_failure">Failed to register with the password manager. The secret code is missing.</string>
    <string name="save_secret_code_title">Your Secret Code &amp; Rescue Kit</string>
    <string name="save_secret_code_message">Your secret code is used to sign in on new devices. It is unique to you and it is very important that you store it safely, as we cannot recover it for you. To save a copy of your secret code, download your Rescue Kit and save it somewhere safe.</string>
    <string name="not_now">Not now</string>
    <string name="test_registration">TEST Registration</string>
    <string name="federated_signin">Federated SignIn</string>
    <string name="create_sudo_button">+ Create Sudo</string>
    <string name="creating_sudo">Creating Sudo&#8230;</string>
    <string name="loading_sudos">Loading Sudos</string>
    <string name="deleting_sudos">Deleting Sudos&#8230;</string>
    <string name="list_sudos_failure">Failed to list Sudos</string>
    <string name="delete_sudo_failure">Failed to delete Sudo</string>
    <string name="info">Information</string>
    <string name="info_title">What is a Sudo?</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="create_sudo_learn_more">A Sudo is a digital identity created and owned by a real person. Vaults must belong to a Sudo.</string>
    <string name="create_sudo_doc_url" translatable="false">https://docs.sudoplatform.com/guides/sudos</string>
    <string name="sudo_name_format">Sudo %1$d</string>
    <string name="no_sudos_present">No Sudos present</string>
    <string name="create_vault_button">+ Create Vault</string>
    <string name="creating_vault">Creating Vault&#8230;</string>
    <string name="loading_vaults">Loading Vaults</string>
    <string name="deleting_vaults">Deleting Vaults&#8230;</string>
    <string name="list_vaults_failure">Failed to list Vaults</string>
    <string name="create_vault_failure">Failed to create Vault</string>
    <string name="delete_vault_failure">Failed to delete Vault</string>
    <string name="vault_label_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="lock">Lock</string>
    <string name="master_password_title">Set Master Password</string>
    <string name="unlock_vaults_title">Unlock Vaults</string>
    <string name="enter_master_password_hint">Enter Your Master Password</string>
    <string name="enter_new_master_password_hint">Enter a Master Password</string>
    <string name="confirm_master_password_hint">Confirm Master Password</string>
    <string name="enter_secret_code">Enter Your Secret Code</string>
    <string name="enter_master_password_error">Please enter a Master Password</string>
    <string name="master_password_mismatch_error">Your passwords do not match</string>
    <string name="unlock">Unlock</string>
    <string name="bad_password">Incorrect password</string>
    <string name="getregistrationstatus_failed">Failed to get the registration status. Please check your network connection and try again.</string>
    <string name="registering">Registering&#8230;</string>
    <string name="unlocking">Unlocking Vaults&#8230;</string>
    <string name="unlock_failure">Failed to unlock the vaults.</string>
    <string name="enter_password_and_code_error">Please anter your Master Password and the Secret Code from your Rescue Kit.</string>
    <string name="wrong_password_or_secret">Failed to unlock the vaults. Incorrect master password or secret code.</string>
    <string name="checking_registration_status">Checking registration status&#8230;</string>
    <string name="deregister">Deregister</string>
    <string name="deregister_confirmation">Are you sure you want to deregister? All vaults and associated data will be deleted.</string>
    <string name="deregistering">Deregistering&#8230;</string>
    <string name="deregister_failure">Unable to deregister: %1$s</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="lock_vaults">Lock Vaults</string>
    <string name="reset_title">Reset Keys?</string>
    <string name="reset_keys">Reset Keys</string>
    <string name="resetting">Resetting&#8230;</string>
    <string name="reset_confirmation">This will clear all encryption keys. You will need your secret code to unlock the vault. For convenience your secret code will be copied to the system clipboard before being removed.</string>
    <string name="reset_failure">Unable to reset: %1$s</string>
    <string name="deregister_title">Are you sure?</string>
    <string name="password_generator">Password Generator</string>
    <string name="view_entitlements">View Entitlements</string>
    <string name="reset_vaults">Reset Vaults</string>
    <string name="reset_vaults_alert_title">All vaults will be lost</string>
    <string name="reset_vaults_alert_message">This will reset your account with the vault service and all vaults will be lost.  Your secret code/rescue kit will be reset and you will be asked to create a new master password.</string>
    <string name="show_secret_code">Show Secret Code</string>
    <string name="secret_code">Secret Code</string>
    <string name="download_rescue_kit">Download Rescue Kit</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="save_pdf_failure">Failed to save Rescue Kit PDF document: %1$s</string>
    <string name="secret_code_copied">Secret code copied to clipboard.</string>
    <string name="rescuekit_pdf">RescueKit.pdf</string>
    <string name="password">Password</string>
    <string name="length">Length</string>
    <string name="weak">Weak</string>
    <string name="lowercase">Lowercase</string>
    <string name="numbers">Numbers</string>
    <string name="symbols">Symbols</string>
    <string name="very_weak">Very Weak</string>
    <string name="moderate">Moderate</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="change_master_password">Change Master Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="enter_current_password_error">Please enter the current master password.</string>
    <string name="enter_new_password_error">Please enter the new master password.</string>
    <string name="master_password_same_error">The new and current passwords cannot be the same.</string>
    <string name="changing_password">Changing the master password&#8230;</string>
    <string name="change_password_failure">Unable to change the master password: %1$s</string>
    <string name="item_name">Item Name</string>
    <string name="placeholder">-</string>
    <string name="create">Create</string>
    <string name="items">Vault Items</string>
    <string name="create_item_button">+ Create Vault Item</string>
    <string name="loading_items">Loading Vault Items</string>
    <string name="deleting_items">Deleting Vault Item&#8230;</string>
    <string name="list_items_failure">Failed to list Vault Items</string>
    <string name="create_vault_item">Create Vault Item</string>
    <string name="login">Login</string>
    <string name="credit_card">Credit Card</string>
    <string name="bank_account">Bank Account</string>
    <string name="contact">Contact</string>
    <string name="drivers_license">Driver\'s License</string>
    <string name="document">Document</string>
    <string name="membership">Membership</string>
    <string name="passport">Passport</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="create_login">Create Login</string>
    <string name="web_address">Web Address</string>
    <string name="enter_name_or_title_of_the_website">Enter name or title of the website</string>
    <string name="enter_the_url_of_the_website_login">Enter the URL of the website</string>
    <string name="username">Username</string>
    <string name="enter_the_username_you_use_to_sign_in">Enter the username you use to sign in</string>
    <string name="enter_or_create_a_password">Enter or create a password</string>
    <string name="notes">Notes</string>
    <string name="create_login_failure">Failed to create Login</string>
    <string name="enter_login_name">Enter a name for this Login</string>
    <string name="creating_login">Creating Login&#8230;</string>
    <string name="edit_login">Edit Login</string>
    <string name="login_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="created_at">Created: %1$s</string>
    <string name="updated_at">Updated: %1$s</string>
    <string name="saving_login">Saving Login&#8230;</string>
    <string name="save_login_failure">Failed to save Login</string>
    <string name="entitlements_title">Entitlements</string>
    <string name="entitlement_name">Entitlement:</string>
    <string name="entitlement_limit">Limit:</string>
    <string name="entitlement_value">Value:</string>
    <string name="loading_entitlements">Loading Entitlements</string>
    <string name="entitlement_max_vaults">maxVaultPerSudo</string>
    <string name="name">Name</string>
    <string name="create_credit_card">Create Credit Card</string>
    <string name="creating_credit_card">Creating Credit Card&#8230;</string>
    <string name="create_credit_card_failure">Failed to create Credit Card</string>
    <string name="enter_card_name">Enter a name for this Credit Card</string>
    <string name="enter_a_name_for_the_credit_card">Enter a name for the credit card</string>
    <string name="card_holder">Card Holder</string>
    <string name="card_type">Card Type</string>
    <string name="visa_mastercard_etc">VISA, Mastercard, etc.</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="mm_yy">MM/YY</string>
    <string name="security_code">Security Code</string>
    <string name="enter_a_name_for_the_contact">Enter a name for the contact</string>
    <string name="address">Address</string>
    <string name="enter_a_street_address_for_the_contact">Enter a street address for the contact</string>
    <string name="company">Company</string>
    <string name="enter_the_company_for_this_contact">Enter the company for this contact</string>
    <string name="email">Email</string>
    <string name="enter_the_email_for_this_contact">Enter the email for this contact</string>
    <string name="first_name">First Name</string>
    <string name="enter_the_first_name_of_the_contact">Enter the first name of the contact</string>
    <string name="last_name">Last Name</string>
    <string name="enter_the_last_name_of_the_contact">Enter the last name of the contact</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="state">State</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="other_phone">Other Phone</string>
</resources>