<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".settings.SettingsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <Button
            android:id="@+id/changeMasterPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:text="@string/change_master_password"
            android:textAlignment="viewStart"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <Button
            android:id="@+id/secretCodeButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:text="@string/show_secret_code"
            android:textAlignment="viewStart"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <Button
            android:id="@+id/passwordGeneratorButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:text="@string/password_generator"
            android:textAlignment="viewStart"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <Button
            android:id="@+id/lockVaultsButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:textColor="@color/colorPrimary"
            android:text="@string/lock_vaults"
            android:textAlignment="viewStart"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            />
        <Button
            android:id="@+id/deregisterButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:text="@string/deregister"/>
        <Button
            android:id="@+id/viewEntitlementsButton"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:textAlignment="viewStart"
            android:textColor="@color/colorPrimary"
            android:text="@string/view_entitlements"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
